# MURaMKit

./: .gitignore  CMakeLists.txt  README.md
include/: Bitmask.h  MURaMKit.h  MURaMKit_CAPI.h
src/: Bitmask.cpp  CMakeLists.txt  MURaMKit.cpp  MURaMKit_CAPI.cpp
utilities/: CMakeLists.txt  bitmask.cpp  bitmask_zero.c  muram_sperr.cpp  slice_norm.c  smart_log.c
